2003-04-02  Bruno Haible  <bruno@clisp.org>

	* modules/binary-io: New file.
	* MODULES.html.sh (func_all_modules): Add it.

2003-04-01  Bruno Haible  <bruno@clisp.org>

	* modules/pathname: New file.
	* MODULES.html.sh (func_all_modules): Add it.

2003-03-28  Bruno Haible  <bruno@clisp.org>

	* modules/copy-file: New file.
	* MODULES.html.sh (func_all_modules): Add it.

2003-02-20  Bruno Haible  <bruno@clisp.org>

	* MODULES.html.sh (func_all_modules): Add poll.

2003-02-19  Paolo Bonzino  <bonzini@gnu.org>

	* modules/poll: New file.

2003-02-18  Bruno Haible  <bruno@clisp.org>

	* MODULES.html.sh (func_all_modules): Add mathl.

2003-02-18  Paolo Bonzino  <bonzini@gnu.org>

	* modules/mathl: New file.

2003-02-17  Bruno Haible  <bruno@clisp.org>

	* modules/mkdtemp: New module.
	* MODULES.html.sh (func_all_modules): Add it.

2003-01-30  Bruno Haible  <bruno@clisp.org>

	* modules/vasnprintf, modules/vasprintf: New modules.
	* MODULES.html.sh (func_all_modules): Add them.

2003-01-29  Bruno Haible  <bruno@clisp.org>

	* modules/stpncpy: New module.
	* MODULES.html.sh (func_all_modules): Add it.

2003-01-28  Bruno Haible  <bruno@clisp.org>

	* modules/c-ctype: New module.
	* MODULES.html.sh (func_all_modules): Add it.

2003-01-27  Bruno Haible  <bruno@clisp.org>

	* modules/xsetenv: New module.
	* MODULES.html.sh (func_all_modules): Add it.

2003-01-23  Bruno Haible  <bruno@clisp.org>

	* modules/minmax: New module.
	* MODULES.html.sh (func_all_modules): Add it.

2003-01-22  Bruno Haible  <bruno@clisp.org>

	* modules/exit: New module.
	* MODULES.html.sh (func_all_modules): Add it.

2003-01-19  Bruno Haible  <bruno@clisp.org>

	* gnulib-tool: Recognize option --extract-maintainer.
	(func_get_maintainer): New function.
	* modules/*: Add Maintainer entry.

2003-01-16  Bruno Haible  <bruno@clisp.org>

	* MODULES.html.sh: Add a table of contents. Add the module name as
	leftmost column. Add hyperlinks.

2003-01-11  Bruno Haible  <bruno@clisp.org>
