@@ -1,3 +1,8 @@
+2003-04-03  Bruno Haible  <bruno@clisp.org>
+
+	* utf-ucs4.m4: New file.
+	* ucs4-utf.m4: New file.
+
 2003-03-30  Bruno Haible  <bruno@clisp.org>
 
 	* copy-file.m4 (gl_COPY_FILE): Add check for chown().
